changes to external links

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Shan Rajapakshe
 author: Shan Rajapakshe
 email: shan.rajapakshe@gmail.com
 description: shan rajapakshe, personal, epidemiology, PRO, patient reported outcomes
-url: "localhost" # the base hostname & protocol for your site, e.g. http://example.com
+url: "shanrajapakshe.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 github_username: shanrajapakshe
 
